# mjcom-old

./: .gitignore  pyproject.toml  utility.py
mjcom/: __init__.py
mjcom/templates/: blog.html  collected-poem.html  header.html  home.html  inner-basic.html  macro.html  outer.html  poem-index.html  poem.html  robots.txt  tag.html  templator-example.html
